infer/tests/codetoanalyze/cpp/errors/types/struct_forward_declare.cpp
../../frontend/types/struct_forward_declare.cpp